--- a/Plugins/Plugins.Tests.csproj
+++ b/Plugins/Plugins.Tests.csproj
@@ -8,7 +8,7 @@
     <!-- Preserve original namespaces -->
     <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
     <AssemblyTitle>RDMP Plugins Tests</AssemblyTitle>
-    <AssemblyDescription>Consolidated RDMP plugin tests (non-UI)</AssemblyDescription>
+    <AssemblyDescription>Consolidated RDMP plugin tests (HicPlugin, RdmpExtensions only)</AssemblyDescription>
     <AssemblyCompany>University of Dundee</AssemblyCompany>
     <AssemblyProduct>Research Data Management Platform</AssemblyProduct>
     <AssemblyCopyright>Copyright (c) The University of Dundee 2018-2019</AssemblyCopyright>
@@ -36,15 +36,10 @@
   </ItemGroup>
 
   <ItemGroup>
-    <!-- Include test source files from all plugins -->
+    <!-- Include test source files from HicPlugin and RdmpExtensions only -->
     <!-- HicPlugin - Non-UI tests -->
     <Compile Include="..\Plugins\HicPlugin\HICPluginTests\**\*.cs">
       <Link>HICPluginTests\%(RecursiveDir)%(Filename)%(Extension)</Link>
-    </Compile>
-
-    <!-- RdmpDicom - Non-UI tests -->
-    <Compile Include="..\Plugins\RdmpDicom\Rdmp.Dicom.Tests\**\*.cs">
-      <Link>Rdmp.Dicom.Tests\%(RecursiveDir)%(Filename)%(Extension)</Link>
     </Compile>
 
     <!-- RdmpExtensions - Automation tests (if any) -->
@@ -69,16 +64,15 @@
     <Compile Remove="**\bin\**\*.cs" />
     <Compile Remove="**\obj\**\*.cs" />
     <Compile Remove="**\Properties\AssemblyInfo.cs" />
+
+    <!-- Exclude any duplicate includes -->
+    <Compile Remove="**\ConnectedServices\**\*.cs" />
   </ItemGroup>
 
   <ItemGroup>
     <!-- Include necessary test data -->
     <Content Include="..\Plugins\HicPlugin\HICPluginTests\**\*.*">
       <Link>HICPluginTests\%(RecursiveDir)%(Filename)%(Extension)</Link>
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Content>
-    <Content Include="..\Plugins\RdmpDicom\Rdmp.Dicom.Tests\**\*.*">
-      <Link>Rdmp.Dicom.Tests\%(RecursiveDir)%(Filename)%(Extension)</Link>
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
   </ItemGroup>
