--- a/Plugins/Plugins.UI.csproj
+++ b/Plugins/Plugins.UI.csproj
@@ -11,7 +11,7 @@
     <!-- Preserve original namespaces -->
     <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
     <AssemblyTitle>RDMP Plugins UI</AssemblyTitle>
-    <AssemblyDescription>Consolidated RDMP plugin UI components</AssemblyDescription>
+    <AssemblyDescription>Consolidated RDMP plugin UI components (HicPlugin, RdmpExtensions only)</AssemblyDescription>
     <AssemblyCompany>University of Dundee</AssemblyCompany>
     <AssemblyProduct>Research Data Management Platform</AssemblyProduct>
     <AssemblyCopyright>Copyright (c) The University of Dundee 2018-2019</AssemblyCopyright>
@@ -27,6 +27,9 @@
     <ProjectReference Include="..\Rdmp.Core\Rdmp.Core.csproj" />
     <ProjectReference Include="..\Rdmp.UI\Rdmp.UI.csproj" />
     <ProjectReference Include="..\Plugins\Plugins.csproj" />
+
+    <!-- RdmpDicom.UI remains external - reference as package if needed -->
+    <!-- <PackageReference Include="Rdmp.Dicom.UI" /> -->
   </ItemGroup>
 
   <ItemGroup>
@@ -36,7 +39,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <!-- Include UI source files from all plugins -->
+    <!-- Include UI source files from HicPlugin and RdmpExtensions only -->
     <!-- HicPlugin - UI components -->
     <Compile Include="..\Plugins\HicPlugin\HICPluginInteractive\**\*.cs">
       <Link>HICPluginInteractive\%(RecursiveDir)%(Filename)%(Extension)</Link>
@@ -45,20 +48,12 @@
       <Link>GoDartsPluginUI\%(RecursiveDir)%(Filename)%(Extension)</Link>
     </Compile>
 
-    <!-- RdmpDicom - UI components -->
-    <Compile Include="..\Plugins\RdmpDicom\Rdmp.Dicom.UI\**\*.cs">
-      <Link>Rdmp.Dicom.UI\%(RecursiveDir)%(Filename)%(Extension)</Link>
-    </Compile>
-
     <!-- Also include any UI files from the main plugin directories -->
     <Compile Include="..\Plugins\HicPlugin\HICPlugin\**\*UI*.cs">
       <Link>HICPlugin\%(RecursiveDir)%(Filename)%(Extension)</Link>
     </Compile>
     <Compile Include="..\Plugins\HicPlugin\SCIStorePlugin\**\*UI*.cs">
       <Link>SCIStorePlugin\%(RecursiveDir)%(Filename)%(Extension)</Link>
-    </Compile>
-    <Compile Include="..\Plugins\RdmpDicom\Rdmp.Dicom\**\*UI*.cs">
-      <Link>Rdmp.Dicom\%(RecursiveDir)%(Filename)%(Extension)</Link>
     </Compile>
   </ItemGroup>
 
@@ -70,10 +65,6 @@
     </Compile>
     <Compile Include="..\Plugins\HicPlugin\GoDartsPluginUI\**\*.Designer.cs">
       <Link>GoDartsPluginUI\%(RecursiveDir)%(Filename)%(Extension)</Link>
-      <DependentUpon>%(Filename)</DependentUpon>
-    </Compile>
-    <Compile Include="..\Plugins\RdmpDicom\Rdmp.Dicom.UI\**\*.Designer.cs">
-      <Link>Rdmp.Dicom.UI\%(RecursiveDir)%(Filename)%(Extension)</Link>
       <DependentUpon>%(Filename)</DependentUpon>
     </Compile>
   </ItemGroup>
@@ -96,6 +87,9 @@
     <Compile Remove="**\bin\**\*.cs" />
     <Compile Remove="**\obj\**\*.cs" />
     <Compile Remove="**\Properties\AssemblyInfo.cs" />
+
+    <!-- Exclude any duplicate includes -->
+    <Compile Remove="**\ConnectedServices\**\*.cs" />
   </ItemGroup>
 
   <ItemGroup>
@@ -106,18 +100,11 @@
     <EmbeddedResource Include="..\Plugins\HicPlugin\GoDartsPluginUI\**\*.resx">
       <Link>GoDartsPluginUI\%(RecursiveDir)%(Filename)%(Extension)</Link>
     </EmbeddedResource>
-    <EmbeddedResource Include="..\Plugins\RdmpDicom\Rdmp.Dicom.UI\**\*.resx">
-      <Link>Rdmp.Dicom.UI\%(RecursiveDir)%(Filename)%(Extension)</Link>
-    </EmbeddedResource>
   </ItemGroup>
 
   <ItemGroup>
     <!-- Include any necessary content files -->
     <Content Include="..\Plugins\HicPlugin\**\*.png">
-      <Link>%(RecursiveDir)%(Filename)%(Extension)</Link>
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Content>
-    <Content Include="..\Plugins\RdmpDicom\**\*.png">
       <Link>%(RecursiveDir)%(Filename)%(Extension)</Link>
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
