--- a/Tools/rdmp/rdmp.csproj
+++ b/Tools/rdmp/rdmp.csproj
@@ -41,6 +41,8 @@
 	</ItemGroup>
 	<ItemGroup>
 		<ProjectReference Include="..\..\Rdmp.Core\Rdmp.Core.csproj" />
+		<ProjectReference Include="..\..\Plugins\HicPlugin.csproj" />
+		<ProjectReference Include="..\..\Plugins\RdmpExtensions\Plugin\RdmpExtensions.Main\RdmpExtensions.Main.csproj" />
 		<PackageReference Include="Terminal.Gui" />
 		<PackageReference Include="System.Threading.ThreadPool" />
 		<PackageReference Include="YamlDotNet" />
