--- a/Application/ResearchDataManagementPlatform/ResearchDataManagementPlatform.csproj
+++ b/Application/ResearchDataManagementPlatform/ResearchDataManagementPlatform.csproj
@@ -106,7 +106,7 @@
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\Rdmp.UI\Rdmp.UI.csproj" />
-    <ProjectReference Include="..\..\Plugins\HicPlugin.csproj" />
+    <ProjectReference Include="..\..\Plugins\Plugins.csproj" />
     <ProjectReference Include="..\..\Plugins\Plugins.UI.csproj" />
     <ProjectReference Include="..\..\Plugins\RdmpExtensions\Plugin\RdmpExtensions.Windows\RdmpExtensions.Windows.csproj" />
   </ItemGroup>
