--- a/Rdmp.Core.Tests/Rdmp.Core.Tests.csproj
+++ b/Rdmp.Core.Tests/Rdmp.Core.Tests.csproj
@@ -69,7 +69,7 @@
             <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
         </PackageReference>
         <PackageReference Include="Microsoft.NET.Test.Sdk" />
-        <PackageReference Include="Minio" />
+        <PackageReference Include="AWSSDK.S3" />
         <PackageReference Include="NSubstitute" />
         <PackageReference Include="NUnit" />
         <PackageReference Include="NUnit.Analyzers">
