Fix path to Plugins test csproj

--- a/.github/workflows/tests-unified.yml
+++ b/.github/workflows/tests-unified.yml
@@ -408,7 +408,7 @@ jobs:
       - name: Test Plugins (Non-UI)
         timeout-minutes: 30
         run: |
-          dotnet test Plugins/Plugins.Tests.csproj \
+          dotnet test Plugins/Plugins.Tests/Plugins.Tests.csproj \
             --nologo \
             --collect:"XPlat Code Coverage" \
             --no-build \
